--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -1,3 +1,7 @@
 <% include ../partials/profile-header %> <!-- Row set up in profile-header -->
 
+<div class="col-sm-6 col-md-6 order-history-container">
+    <h2>My Account</h2>
+</div>
+
 <% include ../partials/profile-footer %>
