--- a/views/menu/index.ejs
+++ b/views/menu/index.ejs
@@ -33,6 +33,7 @@
                                 </div>
                             </div>
                         <% } %>
+                        <!-- Modal -->
                         <div class="modal fade" id="<%= food._id %>" tabindex="-1" role="dialog" aria-labelledby="<%= food.name %>" aria-hidden="true">
                           <div class="modal-dialog" role="document">
                             <div class="modal-content">
