--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -7,20 +7,20 @@
             <div class="form-group">
                 <input class="form-control" type="text" name="username" placeholder="Username">
             </div>
-            <div class="form-group">
+            <div class="form-group" style="width: 48%; display: inline-block; margin-right: 1.5%;">
                 <input class="form-control" type="text" name="firstName" placeholder="First Name">
             </div>
-            <div class="form-group">
+            <div class="form-group" style="width: 48%; display: inline-block; margin-left: 1.5%;">
                 <input class="form-control" type="text" name="lastName" placeholder="Last Name">
             </div>
             <div class="form-group">
-                <input class="form-control" type="text" name="email" placeholder="name@example.com">
+                <input class="form-control" type="text" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="tel" name="phoneNumber" placeholder="Mobile Number">
             </div>
             <div class="form-group">
                 <input class="form-control" type="password" name="password" placeholder="Password">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="tel" name="phoneNumber" placeholder="403-000-0000">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
             <div class="form-group">
