--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -22,6 +22,15 @@
     padding: 0 30px;
 }
 
+/* Account */
+.account-container{
+    display: inline-block;
+    margin-top: 15px;
+    float: left; padding: 0;
+}
+.account-container h2{
+    margin-bottom: 20px;
+}
 
 /* Order Histroy */
 .order-history-container{
@@ -114,12 +123,6 @@
     font-size: 15px;
 }
 
-/* Account */
-.account-container{
-    display: inline-block;
-    margin-top: 15px;
-    float: left; padding: 0;
-}
-.account-container h2{
-    margin-bottom: 20px;
+.modal-order-total-container p{
+    margin: 0;
 }
