--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -1,7 +1,46 @@
 <% include ../partials/profile-header %> <!-- Row set up in profile-header -->
 
-<div class="col-sm-6 col-md-6 order-history-container">
+<div class="col-sm-6 col-md-6 account-container">
     <h2>My Account</h2>
+    <div class="account-form-container">
+        <form class="/user/<%= user._id %>?_method=PUT" action="index.html" method="POST">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input class="form-control" type="text" name="username" id="username" value="<%= user.username %>">
+            </div>
+            <div class="form-group" style="width: 48%; display: inline-block; margin-right: 1.5%;">
+                <label for="first-name">First Name</label>
+                <input class="form-control" type="text" name="firstName" id="first-name" value="<%= user.firstName %>">
+            </div>
+            <div class="form-group" style="width: 48%; display: inline-block; margin-left: 1.5%;">
+                <label for="last-name">Last Name</label>
+                <input class="form-control" type="text" name="lastName" id="last-name" value="<%= user.lastName %>">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input class="form-control" type="text" name="email" id="email" value="<%= user.email %>">
+            </div>
+            <div class="form-group">
+                <label for="phone-number">Phone Number</label>
+                <input class="form-control" type="tel" name="phoneNumber" id="phone-number" value="<%= user.phoneNumber %>">
+            </div>
+            <div class="form-group">
+                <label for="current-password">Current Password</label>
+                <input class="form-control" type="password" name="currentPassword" id="current-password" placeholder="Enter Current Password">
+            </div>
+            <div class="form-group">
+                <label for="new-password">New Password</label>
+                <input class="form-control" type="password" name="newPassword" id="new-password" placeholder="Enter Current Password">
+            </div>
+            <div class="form-group">
+                <label for="new-password-confirm">Confirm New Password</label>
+                <input class="form-control" type="password" name="oldPasswordConfirm" id="new-password-confirm" placeholder="Enter Current Password">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-lg btn-primary btn-block">Save</button>
+            </div>
+        </form>
+    </div>
 </div>
 
 <% include ../partials/profile-footer %>
