--- a/views/user/account.ejs
+++ b/views/user/account.ejs
@@ -6,23 +6,23 @@
         <form class="/user/<%= user._id %>?_method=PUT" action="index.html" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
-                <input class="form-control" type="text" name="username" id="username" value="<%= user.username %>">
+                <input class="form-control" type="text" name="user[username]" id="username" value="<%= user.username %>">
             </div>
             <div class="form-group" style="width: 48%; display: inline-block; margin-right: 1.5%;">
                 <label for="first-name">First Name</label>
-                <input class="form-control" type="text" name="firstName" id="first-name" value="<%= user.firstName %>">
+                <input class="form-control" type="text" name="user[firstName]" id="first-name" value="<%= user.firstName %>">
             </div>
             <div class="form-group" style="width: 48%; display: inline-block; margin-left: 1.5%;">
                 <label for="last-name">Last Name</label>
-                <input class="form-control" type="text" name="lastName" id="last-name" value="<%= user.lastName %>">
+                <input class="form-control" type="text" name="user[lastName]" id="last-name" value="<%= user.lastName %>">
             </div>
             <div class="form-group">
                 <label for="email">Email</label>
-                <input class="form-control" type="text" name="email" id="email" value="<%= user.email %>">
+                <input class="form-control" type="text" name="user[email]" id="email" value="<%= user.email %>">
             </div>
             <div class="form-group">
                 <label for="phone-number">Phone Number</label>
-                <input class="form-control" type="tel" name="phoneNumber" id="phone-number" value="<%= user.phoneNumber %>">
+                <input class="form-control" type="tel" name="user[phoneNumber]" id="phone-number" value="<%= user.phoneNumber %>">
             </div>
             <div class="form-group">
                 <label for="current-password">Current Password</label>
