Created and implemented authorization middlewares

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -65,7 +65,7 @@
         <% } %>
 
         <% if(error && error.length > 0){ %>
-            <div class="alert alert-danger" role="alert" style="z-index: 100; position: fixed; left: 0;">
+            <div class="alert alert-danger" role="alert" style="z-index: 100; position: fixed;">
                 <%= error %>
             </div>
         <% } %>
