--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>FoodDeliverEat</title>
+        <title>locATE</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -22,7 +22,7 @@
     </div>
 
     <div id="landing-header">
- 		<h1>Welcome to LocEATS</h1>
+ 		<h1>Welcome to locATE</h1>
 		<a href="/menu" class="btn btn-lg btn-primary outline">Order Now</a>
     </div>
 
