Working server-socket connection

--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <% if(orders[0] != null){ %>
-    <div class="row">
+    <div class="orders">
         <div class="col-md-8 col-md-offset-2">
             <% for(var i = orders.length-1; i >= 0; i--){ %>
                 <div class="order-container">
