Rebrand and setup for deploy with start script

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -22,7 +22,7 @@
     </div>
 
     <div id="landing-header">
- 		<h1>Welcome to locATE</h1>
+ 		<h1>Welcome to locEATS</h1>
 		<a href="/menu" class="btn btn-lg btn-primary outline">Order Now</a>
     </div>
 
