--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -6,34 +6,34 @@
             <% for(var i = orders.length-1; i >= 0; i--){ %>
                 <div class="order-container">
                     <div class="customer-row">
-                        <div class="customer-info col-md-3">
+                        <div class="customer-info order-date">
                             <p><strong>Order Placed</strong></p>
                         </div>
-                        <div class="customer-info col-md-2">
+                        <div class="customer-info customer-name">
                             <p><strong>Customer Name</strong></p>
                         </div>
-                        <div class="customer-info col-md-2">
+                        <div class="customer-info customer-phone">
                             <p><strong>Customer Contact</strong></p>
                         </div>
-                        <div class="customer-info col-md-2">
+                        <div class="customer-info order-payment">
                             <p><strong>Payment Method</strong></p>
                         </div>
-                        <div class="customer-info col-md-3">
+                        <div class="customer-info order-number">
                             <p><strong>Order Number</strong></p>
                         </div>
-                        <div class="customer-info col-md-3">
+                        <div class="customer-info order-date">
                             <p><%= moment(orders[i].deliveryTime).format("ddd LLL") %></p>
                         </div>
-                        <div class="customer-info col-md-2">
+                        <div class="customer-info customer-name">
                             <p><%= orders[i].name %></p>
                         </div>
-                        <div class="customer-info col-md-2">
+                        <div class="customer-info customer-phone">
                             <p><%= orders[i].phone %></p>
                         </div>
-                        <div class="customer-info col-md-2" style="text-transform: capitalize">
+                        <div class="customer-info order-payment" style="text-transform: capitalize">
                             <p><%= orders[i].payment %></p>
                         </div>
-                        <div class="customer-info col-md-3">
+                        <div class="customer-info order-number">
                             <p><%= orders[i]._id %></p>
                         </div>
                     </div>
